Add Multipl.js and Multiple_Select.js  Modif index.html

--- a/index.html
+++ b/index.html
@@ -1,97 +1,34 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>Jquery实现角色左右选择特效</title>
-<meta name="Keywords" content="Jquery实现角色左右选择特效" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF8" />
+<title>Jquery-宸﹀彸閬告搰</title>
+<meta name="Keywords" content="Jquery-宸﹀彸閬告搰" />
 <script src="jquery.min.js" type="text/javascript"></script>
+<script src="Multiple_Select.js" type="text/javascript"></script>
 <style type="text/css">
 #one{width:200px; height:180px; float:left}
 #two{width:50px; height:180px; float:left}
 #three{width:200px; height:180px; float:left}
 .btn{width:90px; height:30px; margin-top:10px; cursor:pointer;}
 </style>
-<script type="text/javascript">
-//下拉框交换JQuery
+<script>
+  //var json = [{text:"Text2", val:"Value2"},{text:"Text3", val:"Value3"},{text:"Text4", val:"Value4"}];
+  //InitMultipleTable(json);
 $(function(){
-    //移到右边
-    $('#add').click(function() {
-    //获取选中的选项，删除并追加给对方
-        $('#select1 option:selected').appendTo('#select2');
-    });
-    //移到左边
-    $('#remove').click(function() {
-        $('#select2 option:selected').appendTo('#select1');
-    });
-    //全部移到右边
-    $('#add_all').click(function() {
-        //获取全部的选项,删除并追加给对方
-        $('#select1 option').appendTo('#select2');
-    });
-    //全部移到左边
-    $('#remove_all').click(function() {
-        $('#select2 option').appendTo('#select1');
-    });
-    //双击选项
-    $('#select1').dblclick(function(){ //绑定双击事件
-        //获取全部的选项,删除并追加给对方
-        $("option:selected",this).appendTo('#select2'); //追加给对方
-    });
-    //双击选项
-    $('#select2').dblclick(function(){
-       $("option:selected",this).appendTo('#select1');
-    });
-
-    InitMultipleTable();
+  var json = [{text:"Text1", val:"Value1"},{text:"Text2", val:"Value2"},{text:"Text3", val:"Value3"}];
+  var Multiple = Multiple_Select.getInstance(); 
+  Multiple.SetJson(json);
+  Multiple.CreateMultipleSelectTable();
 });
 
-function InitMultipleTable()
-{
-  var content = "<table></table>";
-  $('#appenHtml').append(content);
-}
-
+  
 </script>
 </head>
 <body>
 <br />
 <br />
 <div id="appenHtml"></div>
-
-
-<table width="500" align="center" border="0" cellpadding="0" cellspacing="0" class="newContTab">
-  <tr>
-    <th>&nbsp;</th>
-    <td><div>
-        <div>
-          <select multiple="multiple" id="select1" style="width:150px;height:200px; float:left; border:4px #A0A0A4 outset; padding:4px; ">
-            <option value="A">A</option>
-            <option value="B">B</option>
-            <option value="C">C</option>
-            <option value="D">D</option>
-            <option value="E">E</option>
-            <option value="F">F</option>
-            <option value="G">G</option>
-          </select>
-        </div>
-        <div style="float:left"> <span id="add_all">
-          <input type="button" class="btn" value="Select All"/>
-          </span><br />
-          <span id="add">
-          <input type="button" class="btn" value="Select"/>
-          </span> <br />
-          <span id="remove">
-          <input type="button" class="btn" value="Remove"/>
-          </span><br />
-          <span id="remove_all">
-          <input type="button" class="btn" value="Remove All"/>
-          </span> </div>
-        <div>
-          <select multiple="multiple" id="select2" style="width: 150px;height:200px; float:lfet;border:4px #A0A0A4 outset; padding:4px;">
-          </select>
-        </div>
-      </div></td>
-  </tr>
 </table>
 </body>
 </html>
