--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ $(function(){
   //var json = [{text:"Text1", val:"Value1"},{text:"Text2", val:"Value2"},{text:"Text3", val:"Value3"}];
   var json = ["Text1","Text2","Text3"];
   var Multiple = Multiple_Select.getInstance();
-  Multiple.SetJson(json);
+  Multiple.setOptionJson(json);
   Multiple.setContentId('qqq');
-  Multiple.CreateMultipleSelectTable();
+  Multiple.createMultipleSelectTable();
 });  
 </script>
 </head>
