--- a/index.html
+++ b/index.html
@@ -13,20 +13,26 @@
 .btn{width:90px; height:30px; margin-top:10px; cursor:pointer;}
 </style>
 <script>
+function submitFunc(result){
+	alert(result);
+}
+
+function cancelFunc(result){
+	alert(result);
+}
+
 $(function(){
   //var json = [{text:"Text1", val:"Value1"},{text:"Text2", val:"Value2"},{text:"Text3", val:"Value3"}];
   var json = ["Text1","Text2","Text3"];
   var Multiple = Multiple_Select.getInstance();
   Multiple.setOptionJson(json);
-  Multiple.setContentId('qqq');
-  Multiple.createMultipleSelectTable();
+  Multiple.createMultipleSelectTable(submitFunc,cancelFunc);
 });  
 </script>
 </head>
 <body>
 <br />
 <br />
-<div id="qqq"></div>
 <div id="appenHtml"></div>
 </table>
 </body>
